--- a/style.css
+++ b/style.css
@@ -413,3 +413,49 @@ font-size: 15px;
     box-shadow: 0px 0px 0px 0px lightgray;
     color: #FFFFFF;
 }
+
+.sevenBody{
+    /* height: 680px; */
+    /* background-color: #96BB7C; */
+    overflow: auto;
+}
+.sevenBodyInner{
+    margin: 0px 180px;
+    height: 680px;
+    overflow: auto;
+    background-color:#EFF8ED;
+}
+
+/* .sevenBodyInnerTwo{
+    width: 620px;  
+} */
+
+.sevenBodyInnerNext{
+    display: grid; 
+    grid-template-columns: auto auto
+}
+.sevenColscls{
+    text-align: center; 
+    /* background-color:#EFF8ED; */
+}
+.sevenColscls img{
+    border-radius: 50%;
+}
+.sevenBodyCls{
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 100px;
+}
+.sevenBodyCls h5{
+    margin-top: 0px; 
+    font-weight: 100; 
+    color: #737373;
+}
+.sevenBodyCls h4{
+    margin-top: 1px;
+    margin-bottom: 5px;
+}
+
