--- a/style.css
+++ b/style.css
@@ -261,11 +261,11 @@ GqRightInner p{
     width: 486px;
     height:380px ;  
 }
-.fifthBody{
-    /* height: 1050px; */
-    /* overflow: auto; */
-    /* background-color: #E74040; */
-}
+/* .fifthBody{
+    height: 1050px;
+    overflow: auto;
+    background-color: #E74040;
+} */
 .fifthBodyInner{
     /* height:1100px; */
     margin: 0px 150px 80px 150px;
@@ -462,3 +462,115 @@ font-size: 15px;
     margin-bottom: 5px;
 }
 
+
+
+.footer {
+    position: absolute;
+    /* top: 50%; */
+    /* margin-top: 200px; */
+    /* left: 50%; */
+    /* transform: translate(-45%, -50%); */
+    max-width: 1280px;
+    /* width: 95%; */
+    background: #FAFAFA;
+    border-radius: 6px;
+  }
+  .footer .footer-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 3.5rem;
+    padding: 60px;
+  }
+  .footer-row .footer-col h4 {
+    color: #0f0404;
+    font-size: 1.2rem;
+    font-weight: 400;
+  }
+  .footer-col .links {
+    /* margin-top: 20px; */
+    margin-left: -25px;
+
+  }
+  .footer-col .links li {
+    list-style: none;
+    margin-bottom: 10px;
+  }
+  .footer-col .links li a {
+    text-decoration: none;
+    color: #0f0404;
+  }
+  .footer-col .links li a:hover {
+    color: #0f0404;
+  }
+  .footer-col p {
+    margin: 20px 0;
+    color: #0f0404;
+    max-width: 300px;
+  }
+  .footer-col form {
+    display: flex;
+    gap: 5px;
+  }
+  .footer-col input {
+    height: 40px;
+    border-radius: 6px;
+    background: none;
+    width: 100%;
+    outline: none;
+    border: 1px solid #7489C6 ;
+    caret-color: #0f0404;
+    color: #0f0404;
+    padding-left: 10px;
+  }
+  .footer-col input::placeholder {
+    color: #0f0404;
+  }
+   .footer-col form button {
+    background: #fff;
+    outline: none;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: 0.2s ease;
+  }
+  .footer-col form button:hover {
+    background: #cecccc;
+  }
+  .footer-col .icons {
+    display: flex;
+    margin-top: 30px;
+    gap: 30px;
+    cursor: pointer;
+  }
+  .footer-col .icons i {
+    color: #afb6c7;
+  }
+  .footer-col .icons i:hover  {
+    color: #fff;
+  }
+  @media (max-width: 768px) {
+    .footer {
+      position: relative;
+      bottom: 0;
+      left: 0;
+      transform: none;
+      width: 100%;
+      border-radius: 0;
+    }
+    .footer .footer-row {
+      padding: 20px;
+      gap: 1rem;
+    }
+    .footer-col form {
+      display: block;
+    }
+    .footer-col form :where(input, button) {
+      width: 100%;
+    }
+    .footer-col form button {
+      margin: 10px 0 0 0;
+    }
+  }
