--- a/style.css
+++ b/style.css
@@ -546,7 +546,7 @@ font-size: 15px;
     cursor: pointer;
   }
   .footer-col .icons i {
-    color: #afb6c7;
+    color: #96BB7C;
   }
   .footer-col .icons i:hover  {
     color: #fff;
